Image fixes for firefox/safari

--- a/owners.html
+++ b/owners.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help for Owners</title>
-		<link rel="stylesheet" href="./assets/css/style.css" />
-		<link rel="icon" type="image/png" href=".././assets/images/favicon/favicon-32x32.png" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
+		<link rel="icon" type="image/png" href="../../assets/images/favicon/favicon-32x32.png" />
 		<link rel="error" type="text/html" href="404.html" />
 	</head>
 	<body>
@@ -29,7 +29,7 @@
 		</header>
 		<main>
 			<!-- Opening image and text for all pages -->
-			<section class="hero" style="background-image: url('./assets/images/helpdesk.webp')">
+			<section class="hero" style="background-image: url('../assets/images/helpdesk.webp')">
 				<div class="container">
 					<h2>Welcome, Business Owners</h2>
 					<p>Here you can find resources and advice tailored to help you succeed & manage in the hospitality industry.</p>
@@ -40,7 +40,7 @@
 					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
 					<article class="article-left">
 						<div class="image-side">
-							<img src="./assets/images/strategy-chess.png" alt="Business Strategy" />
+							<img src="../assets/images/strategy-chess.png" alt="Business Strategy" />
 							<div class="overlay">
 								<p>"Plan strategically for success."</p>
 							</div>
@@ -52,13 +52,13 @@
 								market trends, innovate service offerings, and build on data to help predict future needs. Connect with industry experts for insights.
 							</p>
 							<a href="https://www.youtube.com/watch?v=qkU3uwWyAn8" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />Strategic Resources
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />Strategic Resources
 							</a>
 						</div>
 					</article>
 					<article class="article-right">
 						<div class="image-side">
-							<img src="./assets/images/restaurant-management-skills.png" alt="Marketing Trends" />
+							<img src="../assets/images/restaurant-management-skills.png" alt="Marketing Trends" />
 							<div class="overlay">
 								<p>"Grow your customer base through improved marketing."</p>
 							</div>
@@ -70,16 +70,16 @@
 								social media engagement strategies, and customer relationship management to enhance your brand's visibility and customer loyalty.
 							</p>
 							<a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />New Tech to Make Things Easier
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />New Tech to Make Things Easier
 							</a>
 							<a href="https://coso.ai/" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />Marketing AI Software
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />Marketing AI Software
 							</a>
 						</div>
 					</article>
 					<article class="article-left">
 						<div class="image-side">
-							<img src="./assets/images/staff-training.jpg" alt="Staff Management" />
+							<img src="../assets/images/staff-training.jpg" alt="Staff Management" />
 							<div class="overlay">
 								<p>"Develop a more skilled and motivated team."</p>
 							</div>
@@ -91,7 +91,7 @@
 								how to create a more positive work environment that ensures high productivity and job satisfaction.
 							</p>
 							<a href="https://www.theworkwall.com" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />Staff Management Software
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />Staff Management Software
 							</a>
 						</div>
 					</article>
