--- a/staff.html
+++ b/staff.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help for Staff</title>
-		<link rel="stylesheet" href="./assets/css/style.css" />
-		<link rel="icon" type="image/png" href=".././assets/images/favicon/favicon-32x32.png" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
+		<link rel="icon" type="image/png" href="../../assets/images/favicon/favicon-32x32.png" />
 		<link rel="error" type="text/html" href="404.html" />
 	</head>
 	<body>
@@ -29,7 +29,7 @@
 		</header>
 		<main>
 			<!-- Opening image and text for all pages -->
-			<section class="hero" style="background-image: url('./assets/images/helpdesk.webp')">
+			<section class="hero" style="background-image: url('../assets/images/helpdesk.webp')">
 				<div class="container">
 					<h2>Support and Resources for Hospitality Staff</h2>
 					<p>Finding strength in challenging times – resources, advice, and community for hospitality staff.</p>
@@ -105,7 +105,7 @@
 				<div class="container">
 					<article class="article-left">
 						<div class="image-side">
-							<img src="./assets/images/burnt-chef-logo2.jpeg" alt="The Burnt Chef Project" />
+							<img src="../assets/images/burnt-chef-logo2.jpeg" alt="The Burnt Chef Project" />
 							<div class="overlay">
 								<p>"Empowering mental health support."</p>
 							</div>
@@ -121,7 +121,7 @@
 					</article>
 					<article class="article-right">
 						<div class="image-side">
-							<img src="./assets/images/workwall.jpg" alt="WorkWall logo" />
+							<img src="../assets/images/workwall.jpg" alt="WorkWall logo" />
 							<div class="overlay">
 								<p>"Your voice matters in the workplace."</p>
 							</div>
