--- a/managers.html
+++ b/managers.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Hospitality Help for Managers</title>
-		<link rel="stylesheet" href="./assets/css/style.css" />
+		<link rel="stylesheet" href="../assets/css/style.css" />
 		<link rel="icon" type="image/png" href="../assets/images/favicon/favicon-32x32.png" />
 		<link rel="error" type="text/html" href="404.html" />
 	</head>
@@ -29,7 +29,7 @@
 		</header>
 		<main>
 			<!-- Opening image and text for all pages -->
-			<section class="hero" style="background-image: url('./assets/images/helpdesk.webp')">
+			<section class="hero" style="background-image: url('../assets/images/helpdesk.webp')">
 				<div class="container">
 					<h2>Welcome, Hospitality Managers</h2>
 					<p>Discover key strategies and insights to enhance your management skills and improve your venue's performance.</p>
@@ -40,7 +40,7 @@
 					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
 					<article class="article-left">
 						<div class="image-side">
-							<img src="./assets/images/reality-HR-team-building-1024x624.webp" alt="Team Building pic" />
+							<img src="../assets/images/reality-HR-team-building-1024x624.webp" alt="Team Building pic" />
 							<div class="overlay">A stronger team can make your life a lot easier.</div>
 						</div>
 						<div class="text-side">
@@ -50,14 +50,14 @@
 								collaborative & engaging environment, and manage your staff effectively for optimal performance.
 							</p>
 							<a href="https://www.youtube.com/watch?v=bwcyXcOpWVs" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />TedTalk: Team Building Tips
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />TedTalk: Team Building Tips
 							</a>
 						</div>
 					</article>
 					<article class="article-right">
 						<div class="image-side">
 							<img
-								src="./assets/images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg"
+								src="../assets/images/unhappy-guest-client-or-tourist-is-leaving-hotel-vector-cartoon-stick-figure-illustration-2HJC1M2.jpeg"
 								alt="Customer Service Excellence"
 							/>
 							<div class="overlay">Just a 5% increase in customer retention can almost double profits.</div>
@@ -69,13 +69,13 @@
 								constructively, and implementing service improvements that make a difference.
 							</p>
 							<a href="https://www.youtube.com/watch?v=s5ROSlL94tg" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />Video: Customer Service Tips
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />Video: Customer Service Tips
 							</a>
 						</div>
 					</article>
 					<article class="article-left">
 						<div class="image-side">
-							<img src="assets/images/oprtn_efficncy.jpeg" alt="Operational Efficiency" />
+							<img src="../assets/images/oprtn-efficncy.jpeg" alt="Operational Efficiency" />
 							<div class="overlay">More efficiency means more profits.</div>
 						</div>
 						<div class="text-side">
@@ -85,7 +85,7 @@
 								discover ways to increase productivity while maintaining high-quality standards.
 							</p>
 							<a href="https://www.theworkwall.com/How-Technology-is-Revolutionising-Employee-Management-in-the-Hospitality-Industry" target="_blank">
-								<img src="./assets/images/link.png" alt="Link Icon" class="link-icon" />How Tech Can Help
+								<img src="../assets/images/link.png" alt="Link Icon" class="link-icon" />How Tech Can Help
 							</a>
 						</div>
 					</article>
