README test: lightouse, meta desc and text contrast

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Support site to help struggling hospitality staff find any necessary resources" />
 		<title>Hospitality Help Hub</title>
 		<link rel="stylesheet" href="assets/css/style.css" />
 		<link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png" />
