Change icon link colour

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
 			</div>
 			<div class="icon-ref">
-				<a href="https://www.flaticon.com/free-icons/link" target="_blank" title="link icons"
+				<a href="https://www.flaticon.com/free-icons/link" id="icons-link" target="_blank" title="link icons"
 					>Link icons created by Creaticca Creative Agency - Flaticon</a
 				>
 			</div>
