--- a/index.html
+++ b/index.html
@@ -1,121 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Support site to help struggling hospitality staff find any necessary resources" />
-		<title>Hospitality Help Hub</title>
-		<link rel="stylesheet" href="assets/css/style.css" />
-		<link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png" />
-		<link rel="error" type="text/html" href="404.html" />
-	</head>
-	<body>
-		<!-- Standard nav bar for all pages -->
-		<header>
-			<div class="navbar">
-				<h1>Hospitality Help Hub</h1>
-				<input type="checkbox" id="nav-toggle" class="nav-toggle" />
-				<label for="nav-toggle" class="nav-toggle-label">
-					<span></span>
-				</label>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="owners.html">Owners</a></li>
-						<li><a href="managers.html">Managers</a></li>
-						<li><a href="staff.html">Staff</a></li>
-					</ul>
-				</nav>
-			</div>
-		</header>
-		<main>
-			<!-- Opening image and text for all pages -->
-			<section class="hero" style="background-image: url('assets/images/helpdesk.webp')">
-				<div class="container">
-					<h2>Welcome to Your Resource Hub</h2>
-					<p>Supporting hospitality workers through challenging times.</p>
-				</div>
-			</section>
-			<section class="content">
-				<div class="container">
-					<!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
-					<article class="article-left">
-						<div class="image-side">
-							<img src="assets/images/challenge-food.jpeg" alt="Industry Challenges" />
-							<div class="overlay">
-								<p>"Hospitality is a very challenging industry at the moment, you're not alone."</p>
-							</div>
-						</div>
-						<div class="text-side">
-							<h3>Overcoming Industry Challenges</h3>
-							<p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
-							<a href="owners.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Advice for Owners</a>
-							<a href="managers.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Guidance for Managers</a>
-						</div>
-					</article>
-					<article class="article-right">
-						<div class="image-side">
-							<img src="assets/images/resilince.jpeg" alt="Resilience Resources" />
-							<div class="overlay">
-								<p>"If you're feeling the strain of hospitality, we can help you find support."</p>
-							</div>
-						</div>
-						<div class="text-side">
-							<h3>Getting Through The Strain</h3>
-							<p>Empower yourself with resources for personal and professional development.</p>
-							<a href="staff.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" />Support for Staff</a>
-						</div>
-					</article>
-					<article class="article-left">
-						<div class="image-side">
-							<img src="assets/images/team-strenght.jpeg" alt="Community Support" />
-							<div class="overlay">
-								<p>"You're not alone, connect with peers having similar issues."</p>
-							</div>
-						</div>
-						<div class="text-side">
-							<h3>Community Support</h3>
-							<p>Engage with your peers and help build a supportive network.</p>
-							<label for="communityPopupCheckbox" class="popup-button">
-								<img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label
-							>
-						</div>
-					</article>
-				</div>
-			</section>
-		</main>
-		<!-- Pop up with links to social media groups and newsletter subscription -->
-		<input type="checkbox" id="communityPopupCheckbox" class="popup-checkbox" />
-		<div class="popup-container" id="communityPopup">
-			<div class="popup-content">
-				<label for="communityPopupCheckbox" class="close-btn">&times;</label>
-				<h2>Join Our Community</h2>
-				<p>Connect with us on different platforms:</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Support site to help struggling hospitality staff find any necessary resources" />
+        <title>Hospitality Help Hub</title>
+        <link rel="stylesheet" href="assets/css/style.css" />
+        <link rel="icon" type="image/png" href="assets/images/favicon/favicon-32x32.png" />
+        <link rel="error" type="text/html" href="404.html" />
+    </head>
+    <body>
+        <!-- Standard nav bar for all pages -->
+        <header>
+            <div class="navbar">
+                <h1>Hospitality Help Hub</h1>
+                <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+                <label for="nav-toggle" class="nav-toggle-label">
+                    <span></span>
+                </label>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="owners.html">Owners</a></li>
+                        <li><a href="managers.html">Managers</a></li>
+                        <li><a href="staff.html">Staff</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main>
+            <!-- Opening image and text for all pages -->
+            <section class="hero" style="background-image: url('assets/images/helpdesk.webp');">
+                <div class="container">
+                    <h2>Welcome to Your Resource Hub</h2>
+                    <p>Supporting hospitality workers through challenging times.</p>
+                </div>
+            </section>
+            <section class="content">
+                <div class="container">
+                    <!-- Pages are divided into 2 or 3 "articles" with text (text-side) images with text on an overlay -->
+                    <article class="article-left">
+                        <div class="image-side">
+                            <img src="assets/images/challenge-food.jpeg" alt="Industry Challenges" />
+                            <div class="overlay">
+                                <p>"Hospitality is a very challenging industry at the moment, you're not alone."</p>
+                            </div>
+                        </div>
+                        <div class="text-side">
+                            <h3>Overcoming Industry Challenges</h3>
+                            <p>We can help you cope in these tough times. Explore strategies for resilience and success.</p>
+                            <a href="owners.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Advice for Owners</a>
+                            <a href="managers.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" /> Guidance for Managers</a>
+                        </div>
+                    </article>
+                    <article class="article-right">
+                        <div class="image-side">
+                            <img src="assets/images/resilince.jpeg" alt="Resilience Resources" />
+                            <div class="overlay">
+                                <p>"If you're feeling the strain of hospitality, we can help you find support."</p>
+                            </div>
+                        </div>
+                        <div class="text-side">
+                            <h3>Getting Through The Strain</h3>
+                            <p>Empower yourself with resources for personal and professional development.</p>
+                            <a href="staff.html"><img src="assets/images/link.png" alt="link icon" class="link-icon" />Support for Staff</a>
+                        </div>
+                    </article>
+                    <article class="article-left">
+                        <div class="image-side">
+                            <img src="assets/images/team-strenght.jpeg" alt="Community Support" />
+                            <div class="overlay">
+                                <p>"You're not alone, connect with peers having similar issues."</p>
+                            </div>
+                        </div>
+                        <div class="text-side">
+                            <h3>Community Support</h3>
+                            <p>Engage with your peers and help build a supportive network.</p>
+                            <label for="communityPopupCheckbox" class="popup-button"> <img src="assets/images/link.png" alt="Link Icon" class="link-icon" />Join Our Community</label>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </main>
+        <!-- Pop up with links to social media groups and newsletter subscription -->
+        <input type="checkbox" id="communityPopupCheckbox" class="popup-checkbox" />
+        <div class="popup-container" id="communityPopup">
+            <div class="popup-content">
+                <label for="communityPopupCheckbox" class="close-btn">&times;</label>
+                <h2>Join Our Community</h2>
+                <p>Connect with us on different platforms:</p>
 
-				<div>
-					<img class="media-icon" src="assets/images/whatsapp-icon.png" alt="WhatsApp" />
-					<a class="media-link" href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
-				</div>
-				<div>
-					<img class="media-icon" src="assets/images/facebook-icon.png" alt="Facebook" />
-					<a class="media-link" href="https://facebook.com" target="_blank">Join Facebook Group</a>
-				</div>
-				<h3 class="subscribe-head">Subscribe to our Newsletter</h3>
-				<form>
-					<input class="email-input" type="email" placeholder="Your Email" required />
-					<input class="sub-button" type="submit" value="Subscribe" />
-				</form>
-			</div>
-		</div>
-		<footer>
-			<div class="container">
-				<p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
-			</div>
-			<div class="icon-ref">
-				<a href="https://www.flaticon.com/free-icons/link" id="icons-link" target="_blank" title="link icons"
-					>Link icons created by Creaticca Creative Agency - Flaticon</a
-				>
-			</div>
-		</footer>
-	</body>
+                <div>
+                    <img class="media-icon" src="assets/images/whatsapp-icon.png" alt="WhatsApp" />
+                    <a class="media-link" href="https://whatsapp.com" target="_blank">Join WhatsApp Group</a>
+                </div>
+                <div>
+                    <img class="media-icon" src="assets/images/facebook-icon.png" alt="Facebook" />
+                    <a class="media-link" href="https://facebook.com" target="_blank">Join Facebook Group</a>
+                </div>
+                <h3 class="subscribe-head">Subscribe to our Newsletter</h3>
+                <form>
+                    <input class="email-input" type="email" placeholder="Your Email" required />
+                    <input class="sub-button" type="submit" value="Subscribe" />
+                </form>
+            </div>
+        </div>
+        <footer>
+            <div class="container">
+                <p>&copy; 2023 Hospitality Help Hub. All rights reserved.</p>
+            </div>
+            <div class="icon-ref">
+                <a href="https://www.flaticon.com/free-icons/link" id="icons-link" target="_blank" title="link icons">Link icons created by Creaticca Creative Agency - Flaticon</a>
+            </div>
+        </footer>
+    </body>
 </html>
